Simple Google login

--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    
+    implementation 'org.springframework.security:spring-security-oauth2-client' // OAuth2 Client
+    implementation 'org.springframework.security:spring-security-oauth2-jose' // OAuth2 Client
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
