--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ dependencies {
     implementation 'org.springframework.security:spring-security-oauth2-client' // OAuth2 Client
     implementation 'org.springframework.security:spring-security-oauth2-jose' // OAuth2 Client
 
+    implementation 'org.webjars:js-cookie:2.1.0'
+    implementation 'org.webjars:jquery:3.4.1'
+    implementation 'org.webjars:bootstrap:4.3.1'
+    implementation 'org.webjars:webjars-locator-core'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
