--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,11 @@ spring:
       client:
         registration:
           google:
-            clientId: XXX
-            clientSecret: XXX
+            clientId: ${GOOGLE_CLIENT_ID}
+            clientSecret: ${GOOGLE_CLIENT_SECRET}
           facebook:
-            clientId: XXX
-            clientSecret: XXX
+            clientId: ${FACEBOOK_CLIENT_ID}
+            clientSecret: ${FACEBOOK_CLIENT_SERVER}
 #logging:
 #  level:
 #    org.springframework.security: DEBUG
